fix spacing

--- a/src/components/ThemeCard/ThemeCard.scss
+++ b/src/components/ThemeCard/ThemeCard.scss
@@ -13,6 +13,8 @@
         box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
         position: relative;
         display: inline-block;
+        margin-right: 35px;
+        margin-bottom: 35px;
 
 
         &:hover {
